[gd_scene

[ext_resource path="res://Assets/event_popup.wav" type="AudioStream" id=2] format=3]

[ext_resource path="res://UI/EventPopup.gd" type="Script" id=1]

[node name="EventPopup" type="Window"]
script = ExtResource( 1 )
size = Vector2(400, 200)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
text = "Событие!"

[node name="LabelDesc" type="Label" parent="VBoxContainer"]
text = "Описание события..."

[node name="ButtonClose" type="Button" parent="VBoxContainer"]
text = "Ок"

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource(2)
volume_db = -4.0
